--- a/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
@@ -1,9 +1,9 @@
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
         <div class="col-lg-12">
-            <div class="text-center m-t-lg">
+            <div class="text-center m-t-lg" style="margin-bottom: 20px;">
                 <h1>
-                    Welcome in Inspinia Angular 2 Starter Project
+                    Perfomance charts
                 </h1>
                 <small>
                     It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment.
@@ -15,6 +15,12 @@
             </div>
             <div class="col-md-6">
                 <memory-chart></memory-chart>
+            </div>
+            <div class="col-md-6">
+                <disk-chart></disk-chart>
+            </div>
+            <div class="col-md-6">
+                <network-chart></network-chart>
             </div>
         </div>
     </div>
