--- a/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
@@ -1,26 +1,52 @@
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content">
+    <div class="text-muted font-thin pull-right" style="font-size: 12px;margin: 10px;">
+        Running time: {{ boottime || 0 }}
+    </div>
     <div class="row">
-        <div class="col-lg-12">
-            <div class="text-center m-t-lg" style="margin-bottom: 20px;">
-                <h1>
-                    Perfomance charts
-                </h1>
-                <small>
-                    It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment.
-                </small>
+        <div class="col-lg-9">
+            <div class="wrapper-md">
+                <div class="row row-sm">
+                    <div class="col-md-3">
+                        <div class="panel padder-v item text-center bg-warning" style="height: 90px;">
+                            <div class="h1 text-white font-thin">{{ 0 }}</div>
+                            <span class="text-muted text-xs" translate>Boot time</span><br>
+                            <div class="top text-right w-full">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="panel padder-v item text-center bg-info">
+                            <div class="h1 text-white font-thin">0</div>
+                            <span class="text-muted text-xs" translate>Available</span><br>
+                            <div class="top text-right w-full">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="panel padder-v item text-center bg-danger">
+                            <div class="h1 text-white font-thin">0</div>
+                            <span class="text-muted text-xs" translate>SSSSsssss</span>
+                            <div class="top text-right w-full">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="col-md-6">
-                <cpu-chart></cpu-chart>
-            </div>
-            <div class="col-md-6">
-                <memory-chart></memory-chart>
-            </div>
-            <div class="col-md-6">
-                <disk-chart></disk-chart>
-            </div>
-            <div class="col-md-6">
-                <network-chart></network-chart>
+        </div>
+        <div class="col-lg-3">
+            <div class="panel panel-default" style="padding-top: 20px;">
+                <div class="text-center wrapper m-b-sm">              
+                    <h4>Current users</h4>
+                    <ul class="list-group" stlye="text-align: left;">
+                        <li class="list-group-item" style="text-align: left;" *ngFor="let user of users; let i = index;">
+                            <p style="margin:0;font-size: 8px;text-align: right;">{{getDateFromTimestap(user[3])}}</p>
+                            <div>
+                                <span class="label bg-primary">{{i}}</span>
+                                <span>{{user[0]}} / {{user[1]}}</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
