--- a/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="panel padder-v item text-center" [ngClass]="{
+                        <div class="panel padder-v item text-center bg-primary" [ngClass]="{
                             'bg-warning': avarage.avarage_memory > 60 && avarage.avarage_memory < 90,
                             'bg-danger': avarage.avarage_memory >= 90
                         }" style="height: 90px;">
