--- a/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/main-view/main-view.template.html
@@ -26,7 +26,7 @@
                             'bg-danger': avarage.avarage_memory >= 90
                         }" style="height: 90px;">
                             <div class="h1 text-white font-thin">{{ avarage.avarage_memory || 0 }}%</div>
-                            <span class="text-white text-xs" translate>Avarage memory available</span><br>
+                            <span class="text-white text-xs" translate>Avarage memory used</span><br>
                             <div class="top text-right w-full">
                             </div>
                         </div>
