--- a/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
+++ b/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
@@ -21,6 +21,9 @@
             <li [ngClass]="{active: activeRoute('perf')}">
                 <a [routerLink]="['/perf']"><i class="fa fa-desktop"></i> <span class="nav-label">Perfomance</span> </a>
             </li>
+            <li [ngClass]="{active: activeRoute('processes')}">
+                <a [routerLink]="['/processes']"><i class="fa fa-desktop"></i> <span class="nav-label">Processes</span> </a>
+            </li>
             <li [ngClass]="{active: activeRoute('minorView')}">
                 <a [routerLink]="['/minorView']"><i class="fa fa-desktop"></i> <span class="nav-label">Security</span> </a>
             </li>
