--- a/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
+++ b/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
@@ -2,9 +2,14 @@
     <div class="sidebar-collapse">
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
+                <a href="#" style="padding: 0;">
+                        <span class="block m-t-xs"> <strong class="font-bold">{{user.username}}</strong> </span>
+                        <!-- <span class="text-muted text-xs block">Example <b class="caret"></b> </span> -->
+                    </a>
+                    <!--
                 <div class="dropdown profile-element">
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                        <span class="block m-t-xs"> <strong class="font-bold">Example user</strong> </span>
+                        <span class="block m-t-xs"> <strong class="font-bold">{{user.username}}</strong> </span>
                         <span class="text-muted text-xs block">Example <b class="caret"></b> </span>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
@@ -14,6 +19,7 @@
                 <div class="logo-element">
                     IN+
                 </div>
+                -->
             </li>
             <li [ngClass]="{active: activeRoute('dash')}">
                 <a [routerLink]="['/']"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span></a>
