--- a/djangodashpanel/frontend/src/app/views/sec-view/sec-correct-login-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/sec-view/sec-correct-login-view.template.html
@@ -13,6 +13,7 @@
                                     {{p.host}}
                                 </td>
                                 <td><b>{{p.count}}</b> </td>
+                                <td>{{p.last_date}}</td>
                             </tr>
                         </table>
                     </div>
@@ -68,6 +69,7 @@
                                             {{p.username}}
                                         </td>
                                         <td><b>{{p.count}}</b> </td>
+                                        <td>{{p.last_date}}</td>
                                     </tr>
                                 </table>
                             </div>
