--- a/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
+++ b/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
@@ -6,20 +6,6 @@
                         <span class="block m-t-xs"> <strong class="font-bold">{{user.username}}</strong> </span>
                         <!-- <span class="text-muted text-xs block">Example <b class="caret"></b> </span> -->
                     </a>
-                    <!--
-                <div class="dropdown profile-element">
-                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                        <span class="block m-t-xs"> <strong class="font-bold">{{user.username}}</strong> </span>
-                        <span class="text-muted text-xs block">Example <b class="caret"></b> </span>
-                    </a>
-                    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a href="#">Logout</a></li>
-                    </ul>
-                </div>
-                <div class="logo-element">
-                    IN+
-                </div>
-                -->
             </li>
             <li [ngClass]="{active: activeRoute('dash')}">
                 <a [routerLink]="['/']"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span></a>
@@ -51,10 +37,12 @@
                     </a>
                   </li>
                 </ul>
-                <!-- <a [routerLink]="['/minorView']"><i class="fa fa-desktop"></i> <span class="nav-label">Security</span> </a> -->
             </li>
             <li [ngClass]="{active: activeRoute('minorView')}">
                 <a [routerLink]="['/minorView']"><i class="fa fa-desktop"></i> <span class="nav-label">Database</span> </a>
+            </li>
+            <li *ngIf="apps.backup" [ngClass]="{active: activeRoute('backups')}">
+                <a [routerLink]="['/backups']"><i class="fa fa-desktop"></i> <span class="nav-label">Backups</span> </a>
             </li>
         </ul>
 
