--- a/djangodashpanel/frontend/src/app/views/backup-view/backup-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/backup-view/backup-view.template.html
@@ -38,7 +38,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="form-group">
+                                        <div *ngIf="mediadirs.length == 0" class="form-group">
                                             <div class="panel panel-default">
                                                 <div class="panel-body">
                                                     <p *ngIf="mediadirs.length == 0">No directories specified</p>
