--- a/djangodashpanel/frontend/src/app/components/charts/cpu/cpu.template.html
+++ b/djangodashpanel/frontend/src/app/components/charts/cpu/cpu.template.html
@@ -1,4 +1,8 @@
 <div style="text-align: center;">
+    <button type="button" class="btn btn-default btn-xs pull-right" (click)="refresh()">
+        <i class="fa fa-refresh"></i>
+    </button>
+
     <canvas baseChart
                 [datasets]="lineChartData"
                 [labels]="lineChartLabels"
