--- a/djangodashpanel/frontend/src/app/components/charts/memory/memory.template.html
+++ b/djangodashpanel/frontend/src/app/components/charts/memory/memory.template.html
@@ -1,4 +1,7 @@
 <div style="text-align: center;">
+    <button type="button" class="btn btn-default btn-xs pull-right" (click)="refresh()">
+        <i class="fa fa-refresh"></i>
+    </button>
     <canvas baseChart
                 [datasets]="lineChartData"
                 [labels]="lineChartLabels"
