--- a/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
+++ b/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
@@ -2,10 +2,11 @@
     <div class="sidebar-collapse">
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
-                <a href="#" style="padding: 0;">
-                        <span class="block m-t-xs"> <strong class="font-bold">{{user.username}}</strong> </span>
+                <a href="#">
+                    <i class="fa fa-user"></i>
+                    <span class="nav-label"> <strong class="font-bold">{{user.username}}</strong> </span>
                         <!-- <span class="text-muted text-xs block">Example <b class="caret"></b> </span> -->
-                    </a>
+                </a>
             </li>
             <li [ngClass]="{active: activeRoute('dash')}">
                 <a [routerLink]="['/']"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span></a>
