--- a/djangodashpanel/frontend/src/app/views/sec-view/sec-correct-login-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/sec-view/sec-correct-login-view.template.html
@@ -34,6 +34,10 @@
                         </div>
 
                         <div style="text-align: center;">
+                            <button type="button" class="btn btn-default btn-xs pull-right" (click)="refreshChart()">
+                                <i class="fa fa-refresh"></i>
+                            </button>
+                            
                             <canvas baseChart
                                         [datasets]="lineChartData"
                                         [labels]="lineChartLabels"
