--- a/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
+++ b/djangodashpanel/frontend/src/app/components/common/navigation/navigation.template.html
@@ -12,10 +12,10 @@
                 <a [routerLink]="['/']"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard</span></a>
             </li>
             <li [ngClass]="{active: activeRoute('perf')}">
-                <a [routerLink]="['/perf']"><i class="fa fa-desktop"></i> <span class="nav-label">Perfomance</span> </a>
+                <a [routerLink]="['/perf']"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Perfomance</span> </a>
             </li>
             <li [ngClass]="{active: activeRoute('processes')}">
-                <a [routerLink]="['/processes']"><i class="fa fa-desktop"></i> <span class="nav-label">Processes</span> </a>
+                <a [routerLink]="['/processes']"><i class="fa fa-tasks"></i> <span class="nav-label">Processes</span> </a>
             </li>
             <li [ngClass]="{active: activeRoute('correctlogin') || activeRoute('incorrectlogin')}">
                 <a href="" class="auto">      
@@ -23,27 +23,27 @@
                     <i class="fa fa-fw fa-angle-right text"></i>
                     <i class="fa fa-fw fa-angle-down text-active"></i>
                   </span>
-                  <i class="glyphicon glyphicon-th"></i>
+                  <i class="fa fa-shield"></i>
                   <span>Security</span>
                 </a>
                 <ul class="nav nav-sub dk">
                   <li class="nav-sub-header">
-                    <a [routerLink]="['/correctlogin']" style="font-size: 11px;margin-left: 15px;">
-                      <span>Number of login </span>
+                    <a [routerLink]="['/correctlogin']" style="font-size: 11px;">
+                      <i class="fa fa-square-o"></i><span>Number of login </span>
                     </a>
                   </li>
                   <li ui-sref-active="active">
-                    <a [routerLink]="['/incorrectlogin']" style="font-size: 11px;margin-left: 15px;">
-                      <span>Incorrect attempt login</span>
+                    <a [routerLink]="['/incorrectlogin']" style="font-size: 11px;">
+                      <i class="fa  fa-square"></i><span>Incorrect attempt login</span>
                     </a>
                   </li>
                 </ul>
             </li>
             <li [ngClass]="{active: activeRoute('minorView')}">
-                <a [routerLink]="['/minorView']"><i class="fa fa-desktop"></i> <span class="nav-label">Database</span> </a>
+                <a [routerLink]="['/minorView']"><i class="fa fa-cube"></i> <span class="nav-label">Database</span> </a>
             </li>
             <li *ngIf="apps.backup" [ngClass]="{active: activeRoute('backups')}">
-                <a [routerLink]="['/backups']"><i class="fa fa-desktop"></i> <span class="nav-label">Backups</span> </a>
+                <a [routerLink]="['/backups']"><i class="fa fa-truck"></i> <span class="nav-label">Backups</span> </a>
             </li>
         </ul>
 
