--- a/djangodashpanel/templates/index_dash_admin.html
+++ b/djangodashpanel/templates/index_dash_admin.html
@@ -1,7 +1,7 @@
 {% extends "admin/index.html" %}
 
 {% block content %}
-	<h2>
+	<h2 style="margin: 20px 0;">
 		<a href="/dash/" title="Django Dashboard Monitoring panel" style="margin: 20px 0;">Django Dashboard Monitoring panel</a>
 	</h2>
 
