--- a/djangodashpanel/frontend/src/app/views/backup-view/backup-view.template.html
+++ b/djangodashpanel/frontend/src/app/views/backup-view/backup-view.template.html
@@ -30,7 +30,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <label>Absolute path for media directory (if required):</label>
+                                            <label>Absolute path for media directory (optional):</label>
                                             <div class="input-group">
                                                 <input name="inputedDir" type="text" class="form-control" [(ngModel)]="model.inputedDir" (keyup.enter)="addDirectory()"/>
                                                 <span class="input-group-addon" style="padding: 0;"> 
